Allow Git/SSH URL configuration
Allow to customize the remote URL similarly to gitHttpUrl.

Change-Id: I5f57e2016091d832a07dd7f7173f673f896039e5